infra/k8s-prod/oauth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: oauth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth
  template:
    metadata:
      labels:
        app: oauth
    spec:
    # Current warnings due to not specifying resource limits. 
    # See https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
    # if you deploy someplace where resource limitations would be useful
      containers:
        - name: oauth
          image: hfcdevops/oauth-manager
---
apiVersion: v1
kind: Service 
metadata:
  name: oauth-svc
spec:
  selector:
    app: oauth 
  ports:
    - name: oauth 
      protocol: TCP
      port: 3000
      targetPort: 3000
